--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 			<version>${nest.version}</version>
 		</dependency>
 		<dependency>
+                        <groupId>org.esa.nest</groupId>
+                        <artifactId>nest-op-orthorectification</artifactId>
+                        <version>${nest.version}</version>
+                </dependency>
+		<dependency>
 			<groupId>org.esa.nest</groupId>
 			<artifactId>nest-op-sar-tools</artifactId>
 			<version>${nest.version}</version>
