--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.esa.nest</groupId>
+			<artifactId>nest-io-sentinel1</artifactId>
+			<version>${nest.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.esa.nest</groupId>
 			<artifactId>nest-op-sentinel1</artifactId>
 			<version>${nest.version}</version>
 		</dependency>
